# sanad-project

./: .replit  config.toml  design_guidelines.md  main.py  package-lock.json  package.json  pyproject.toml  replit.md  run_app.sh  tailwind.config.ts
